app/base/monitoring/umami/umami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`analytics.sportdeets.com`)
      kind: Rule
      services:
        - name: umami
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`analytics.sportdeets.com`)
      kind: Rule
      services:
        - name: umami
          port: 3000
  tls:
    certResolver: letsencrypt
